# tanssi_realXDeal_game

./: Cargo.toml
client/consensus/src/collators/: lookahead.rs
container-chains/nodes/simple/src/: chain_spec.rs
container-chains/runtime-templates/simple/: Cargo.toml
container-chains/runtime-templates/simple/src/: lib.rs
pallets/game/: Cargo.toml
pallets/game/src/: benchmarking.rs  functions.rs  lib.rs  tests.rs  weights.rs
runtime/dancebox/src/: xcm_config.rs
seed/: pallet_balance.json
